--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,13 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'contact' %}">Contact Us</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'delivery_request' %}">Book with us</a>
+                    </li>
                     {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'delivery_list' %}">My Bookings</a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
                     </li>
