--- a/bookings/templates/bookings/reservations.html
+++ b/bookings/templates/bookings/reservations.html
@@ -19,7 +19,7 @@
                         {% if not user.is_authenticated %}
                         <h3>Login Required</h3>
                         <p>Please login to book a table</p>
-                        <button class="btn btn-success" type="submit"><a href="{% url 'account_login' %}">Go to Sign in
+                        <button class="btn btn-success" type="submit"><a href="{% url 'account_login' %}">Go to Login
                                 Page</a></button>
                         {% else %}
                         <!-- Display form if user is logged in-->
