--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -4,14 +4,14 @@
 {% load account socialaccount %}
 {% load socialaccount %}
 
-{% block head_title %}{% trans "Sign In" %}{% endblock %}
+{% block head_title %}{% trans "Log in" %}{% endblock %}
 
 {% block content %}
 
 <div class="container">
   <div class="row">
     <div class="col-md-8 mt-3 offset-md-2">
-      <h3>{% trans "Sign In" %}</h3>
+      <h3>{% trans "Log in" %}</h3>
 
       <p>{% blocktrans %}Welcome to the SHOOD Blog. To leave a comment or like a post, please log in. If you
         have not created an account yet, then <a class="link" href="{{ signup_url }}">sign up</a>
@@ -26,7 +26,7 @@
         {% if redirect_field_value %}
         <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
         {% endif %}
-        <button class="btn btn-primary right" type="submit">{% trans "Sign In" %}</button>
+        <button class="btn btn-primary right" type="submit">{% trans "Log in" %}</button>
       </form>
     </div>
   </div>
