Enhanced website design across multiple sections for improved user experience and aesthetics

--- a/bookings/templates/bookings/cancel_booking.html
+++ b/bookings/templates/bookings/cancel_booking.html
@@ -28,8 +28,7 @@
                         <p class="card-subtitle mb-2 text-muted">{{ booking.requested_date }} at
                             {{ booking.requested_time }}</p><br>
                         <p class="card-subtitle mb-2">Booking status: {{ booking.status }}.</p>
-                        <p class="card-text">No. of Guests: {{ booking.guest_count }}.</p>
-                        <p class="card-text">Table: {{booking.table}}</p>
+                        <p class="card-text">Service: {{booking.service}}</p>
                         <form method="POST">
                             {% csrf_token %}
                             <button class="btn btn-danger" type="submit">YES</button>
