--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -29,7 +29,7 @@
           <!-- Contact form -->
           {{ contact_form| crispy }}
         </div>
-        <button class="btn btn-primary btn-signuup" id="login-contact" type="submit">Submit</button>
+        <button class="btn btn-signup right" id="login-contact" type="submit">Submit</button>
       </form>
       {% endif %}
       {% endif %}
