--- a/bookings/templates/bookings/reservations.html
+++ b/bookings/templates/bookings/reservations.html
@@ -23,7 +23,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12 col-lg-10 offset-lg-1">
-                    <div class="alert alert-info mt-3">
+                    <div class="alert alert-info mt-3" id="disclaimer">
                         <h5 class="alert-heading">Delivery Services Disclaimer:</h5>
                         <p class="small">If you are considering our Standard and Expedited Delivery services. Please note that the availability of requested dates and times for both these services is subject to our delivery schedules and operational capacity. While we strive to accommodate your preferences, we cannot guarantee your requested date and time until we confirm your booking.</p>
         
@@ -41,7 +41,7 @@
             {% if not user.is_authenticated %}
             <h3>Login Required</h3>
             <p>Please login to book a service</p>
-            <a href="{% url 'account_login' %}" class="btn btn-success">Go to Login Page</a>
+            <a href="{% url 'account_login' %}" class="btn btn-signup btn-primary">Go to Login Page</a>
             {% else %}
             <!-- Display form if user is logged in -->
             {% if user.is_authenticated %}
@@ -54,7 +54,7 @@
                 <!-- booking form -->
                 {{ booking_form| crispy }}
 
-                <button class="btn btn-success" type="submit">Submit</button>
+                <button class="btn btn-signup btn-primary" type="submit">Submit</button>
             </form>
             
             
