--- a/contact/templates/contact/received.html
+++ b/contact/templates/contact/received.html
@@ -6,12 +6,10 @@
         <div class="row justify-content-center">
             <div class="col-md-6 mt-5 mb-5">
                 <div class="card light-bg">
-                    <div class="card-body p-5 rounded">
-                        <div class="row justify-content-center">
-                            <h1 class="brand">Message Received</h1>
-                            <p class="thin">We will get back to you soon!</p>
-                            <h5>Return home, <a href="{% url 'home' %}" class="link">click here</a></h5>
-                        </div>
+                    <div class="card-body p-5 rounded text-center">
+                        <h1 class="brand">Message Received</h1>
+                        <p class="thin">We will get back to you soon!</p>
+                        <button type="button" onclick="location.href='{% url 'home' %}'" class="btn btn-primary">Return Home</button>
                     </div>
                 </div>
             </div>
