--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,6 +5,10 @@
   color: #4A4A4F;
 }
 
+#h4hero{
+  font-size: 1rem;
+}
+
 .mb-5 {
   margin-bottom: 7rem!important;
 }
@@ -30,7 +34,7 @@
 }
 
 .dark-bg {
-  background-color: #445261;
+  background-color: #3f3e68;
   color: white;
 }
 
@@ -46,6 +50,11 @@
 #card-heading {
   margin-top: 1rem;
   color: #3c3c68;
+}
+
+.card-title {
+  margin-bottom: 0.5rem;
+  padding-top: 1rem;
 }
 
 .image-container {
@@ -146,6 +155,17 @@
   color: #3c3c68;
 }
 
+#btn-banner {
+  background-color: white;
+  color: #3c3c68;
+}
+
+#btn-banner:hover{
+  background-color: #3c3c68;
+  color: white;
+}
+
+
 .link {
   color: #3c3c68;
   text-decoration: none;
@@ -240,6 +260,7 @@ input[type="password"] {
 
 #login-contact {
   display: inline-block;
+  background-color: red;
   font-weight: 400;
   text-align: center;
   vertical-align: middle;
@@ -250,6 +271,13 @@ input[type="password"] {
   padding: 0.75rem 1.5rem;
   font-size: 1.2rem;
 }
+
+#disclaimer {
+  background-color: #eff3fc;
+  color: #3c3c68;
+  border-color: white;
+}
+
 
 .footer-dark {
   padding:50px 0;
