--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -1,36 +1,28 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
-
 {% load i18n %}
 
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
 {% block content %}
-<div class="container-fluid mt-5">
-  <div class="row d-flex justify-content-center">
-      <div class="col-sm-8 mt-5 mb-5">
-          <h1 class="text-center">Create Account</h1><hr>
-      </div>
-  </div>
 <div class="container">
-  <div class="row bg-darker mt-5 rounded booking-card">
-    <div class="col-md-4 offset-md-2 p-3 mb-5 mx-auto">
-
-      <h2>{% trans "Register" %}</h2>
-
-      <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">login</a>.{% endblocktrans %}
-      </p>
-
+  <div class="row">
+    <div class="col-md-8 mt-3 offset-md-2">
+      <h3>Create Account</h3>
+      <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">login</a>.{% endblocktrans %}</p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-8 mt-3 offset-md-2">
       <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
         {% csrf_token %}
         {{ form|crispy }}
         {% if redirect_field_value %}
         <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
         {% endif %}
-        <button class="btn btn-success" type="submit">{% trans "Register" %} &raquo;</button>
+        <button class="btn btn-primary right" type="submit">{% trans "Register" %} &raquo;</button>
       </form>
     </div>
   </div>
 </div>
-
 {% endblock %}
