--- a/contact/templates/contact/received.html
+++ b/contact/templates/contact/received.html
@@ -9,7 +9,7 @@
                     <div class="card-body p-5 rounded text-center">
                         <h1 class="brand">Message Received</h1>
                         <p class="thin">We will get back to you soon!</p>
-                        <button type="button" onclick="location.href='{% url 'home' %}'" class="btn btn-primary">Return Home</button>
+                        <h5>Return home, <a href="{% url 'home' %}" class="booking-success-button">click</a></h5>
                     </div>
                 </div>
             </div>
