--- a/static/css/style.css
+++ b/static/css/style.css
@@ -160,6 +160,16 @@
   color: #3c3c68;
 }
 
+/* #btn-contact {
+  color: white;
+  text-decoration: none;
+
+}
+
+#btn-contact:hover {
+  color:#3c3c68;
+} */
+
 #btn-banner:hover{
   background-color: #3c3c68;
   color: white;
