Updated base.html after running W3C Markup Validation

--- a/templates/base.html
+++ b/templates/base.html
@@ -85,8 +85,8 @@
     <div class="d-flex justify-content-center align-items-center h-100">
       <div class="text-white">
         <h1 class="mb-3">SHOOD Blog</h1>
-        <h4 class="mb-3" id="h4hero">A Guide to Smart Grocery Shopping</h4>
-        <h4 class="mb-3" id="h4hero">Jumpstart Your Shopping Journey with SHOOD - Book a service and Relax. We've Got the Rest Covered!</h4>
+        <h4 class="mb-3 h4hero">A Guide to Smart Grocery Shopping</h4>
+        <h4 class="mb-3 h4hero">Jumpstart Your Shopping Journey with SHOOD - Book a service and Relax. We've Got the Rest Covered!</h4>
         <a href="{% url 'reservations' %}" class="btn btn-primary btn-lg" id="btn-banner">Book a Service</a>
       </div>
     </div>
